# doc_editable_platform

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/application/: security.py  unit_of_work.py
backend/app/application/services/: audit_service.py  auth_service.py  document_service.py  file_validation.py  graph_service.py  search_service.py  symbol_service.py
backend/app/core/: config.py  container.py  errors.py  logging.py
backend/app/domain/: __init__.py  entities.py  enums.py  events.py  ports.py  services.py  value_objects.py
backend/app/infrastructure/: factories.py
backend/app/infrastructure/classification/: rule_engine.py
backend/app/infrastructure/cv/: pdf_parser.py  symbol_extractor.py
backend/app/infrastructure/db/: base.py  mappers.py  models.py  unit_of_work.py
backend/app/infrastructure/embeddings/: hash_embedder.py  openclip_embedder.py
backend/app/infrastructure/graph/: inferrer.py
backend/app/infrastructure/messaging/: event_publisher.py
backend/app/infrastructure/ocr/: engines.py
backend/app/infrastructure/queue/: postgres_queue.py
backend/app/infrastructure/repositories/: audit_repository.py  document_repository.py  relationship_repository.py  symbol_repository.py  user_repository.py
backend/app/infrastructure/security/: clamav.py  jwt.py  passwords.py
backend/app/infrastructure/storage/: postgres_store.py  s3.py
backend/app/interfaces/http/: app.py  deps.py  metrics.py  middleware.py  rate_limit.py
backend/app/interfaces/http/routers/: audit.py  auth.py  documents.py  graph.py  health.py  search.py  symbols.py
backend/app/interfaces/http/schemas/: auth.py  common.py  documents.py  graph.py  search.py  symbols.py
backend/app/interfaces/worker/: engines.py  run.py  runner.py  stages.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_pipeline_tasks.py  0003_object_blobs.py
backend/scripts/: seed.py
backend/tests/api/: conftest.py  test_audit_api.py  test_documents_api.py  test_observability.py  test_symbols_graph_search_api.py
backend/tests/integration/: conftest.py  test_postgres_store.py  test_repositories.py
backend/tests/unit/: test_adapters.py  test_services.py  test_state_machine.py  test_symbol_entity.py  test_value_objects.py
backend/tests/worker/: test_pipeline_e2e.py
docs/: 01-phase1-foundations.md  02-phase2-data-api-domain.md  03-phase3-infra-security-deploy.md  04-phase4-implementation-plan.md  deployment-guide.md  monitoring-guide.md  security-guide.md
docs/adr/: 0001-clean-architecture-ddd.md  0002-postgres-pgvector-single-store.md  0003-event-driven-celery-pipeline.md  0004-pluggable-classifier-embedder-strategies.md  0005-postgres-job-queue-supersedes-celery.md
docs/screenshots/: README.md
frontend/: .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: StatusBadge.tsx  ThemeToggle.tsx
frontend/src/hooks/: useThemeColors.ts
frontend/src/pages/: CanvasPage.tsx  DashboardPage.tsx  GraphPage.tsx  LoginPage.tsx  PropertyEditor.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/store/: auth.test.ts  auth.ts  canvas.test.ts  canvas.ts  theme.test.ts  theme.ts
frontend/src/styles/: theme.css
frontend/src/types/: api.ts
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
