[project]
name = "document-ai-platform"
version = "0.1.0"
description = "Production-grade Document AI Platform: extract symbols from PDFs into structured, searchable domain objects."
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "boto3>=1.34",            # S3/MinIO client
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "httpx>=0.27",
    # Core CV stack — the worker needs these for PDF render + symbol extraction even with the
    # default (no-OCR, hash-embedding) backends. The heavy ML models stay optional in `ml`.
    "pymupdf>=1.24",
    "opencv-python-headless>=4.9",
    "pillow>=10.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML models — only needed for paddle OCR / OpenCLIP embeddings (set the matching backends).
ml = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "open-clip-torch>=2.24",
    "torch>=2.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "testcontainers>=4.5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ARG", "PTH"]
ignore = [
    "B008",            # FastAPI Depends() in defaults is idiomatic
    "UP042",           # str+Enum mixin is deliberate (JSON value + pydantic interop)
    "UP046",           # Generic[T] kept for pydantic generic model compatibility
    "ARG001", "ARG002", # adapters intentionally ignore some port-contract parameters
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure domain/application unit tests (no I/O)",
    "integration: requires Postgres/Redis/MinIO",
    "api: exercises the FastAPI app",
    "worker: exercises Celery tasks",
    "e2e: full pipeline on a sample PDF (slow)",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "*/migrations/*",
    "app/main.py",                                   # ASGI entrypoint (trivial)
    "app/interfaces/worker/run.py",                  # process entrypoint loop
    "app/infrastructure/embeddings/openclip_embedder.py",  # needs torch + model download
]

[tool.coverage.report]
fail_under = 90
show_missing = true
